Set coupon limit and there priority